--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_green_dark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.diceout.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -19,6 +20,8 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="22dp"
         android:text="Let's Play!"
+        android:textColor="@android:color/background_light"
+        android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,47 +29,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.032" />
 
-    <Button
-        android:id="@+id/rollButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/die2Image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="ROLL!"
-        android:onClick="rollDice"
-        tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="33dp" />
-    
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
         android:id="@+id/die1Image"
-        android:layout_below="@id/rollResult"
-        android:layout_marginTop="25dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/die_1"
-        />
+        android:layout_below="@id/rollResult"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/die_1" />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
         android:id="@+id/die2Image"
-        android:layout_below="@id/rollResult"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/die_1"
-        />
-
-    <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/die3Image"
         android:layout_below="@id/rollResult"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
+        android:src="@drawable/die_1" />
+
+    <ImageView
+        android:id="@+id/die3Image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentRight="true"
-        android:src="@drawable/die_1"
-        />
+        android:layout_below="@id/rollResult"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/die_1" />
 
     <TextView
         android:id="@+id/scoreText"
@@ -76,6 +66,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:text="Score : 0"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@android:color/white" />
 
 </android.widget.RelativeLayout>
